<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/etNameString"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/etPasswordString"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/etName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvOutputDefaultValue"
        app:layout_constraintStart_toEndOf="@+id/buOutput"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/buTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="Total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvOutputSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tvOutputSumDefaultValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buTotal" />

    <EditText
        android:id="@+id/etNumberOne"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:digits="0123456789-."
        android:ems="10"
        android:hint="@string/etNumberOne"
        android:inputType="textPersonName|numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/buTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNumberTwo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:digits="0123456789-."
        android:ems="10"
        android:hint="@string/etNumberTwo"
        android:inputType="textPersonName|numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/buTotal"
        app:layout_constraintStart_toEndOf="@+id/etNumberOne" />
</androidx.constraintlayout.widget.ConstraintLayout>